refactor(utils): 重构工具类
- 优化了 OkHttpUtil 类的结构和方法
-重构了 SimpleFileUtil 类,增加了许多新方法
- 移除了 VerifyCodeOutput 类的冗余注释
- 优化了 VerifyCodeUtil 类的代码结构